--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "jest": "^29.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.4.15"
   },
   "dependencies": {
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
+    "papaparse": "^5.5.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.3.0",
-    "styled-components": "^6.1.15",
+    "react-router-dom": "^7.4.0",
+    "react-transition-group": "^4.4.5",
+    "recharts": "^2.15.1",
+    "styled-components": "^6.1.16",
     "yup": "^1.6.1"
   }
 }
