--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "vite": "^5.4.15"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.8.4",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "papaparse": "^5.5.2",
+    "react-cookie-consent": "^9.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
